--- a/index.ipynb
+++ b/index.ipynb
@@ -468,7 +468,7 @@
    "outputs": [],
    "source": [
     "#For simplicity we simply drop null values here.\n",
-    "final = final.dropna()"
+    "final = final.dropna() np."
    ]
   },
   {
@@ -771,7 +771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
