automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -468,7 +468,7 @@
    "outputs": [],
    "source": [
     "#For simplicity we simply drop null values here.\n",
-    "final = final.dropna() np."
+    "final = final.dropna() "
    ]
   },
   {
