automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -734,7 +734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_sizes= list(range())"
+    "t_sizes= list(range(5,100,5))"
    ]
   },
   {
