automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -730,11 +730,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_sizes= list(range(5,100,5))"
+    "t_sizes= list(range(5,100,5))\n"
    ]
   },
   {
